# src/vmodels/goldFlow.model.ts
@@ -1,0 +1,5 @@
+type IReqCoursesIds = {
+  coursesIds: string[];
+}
+
+export { IReqCoursesIds };
